# cli-AI-assist

./: LICENSE  README.md  cli_AI_assist.py  pyproject.toml  requirements.txt  setup.py
data/: models.txt  price.txt  生成數據.txt
